--- a/components/iot-frontend/manifests/iot-frontend-route.yaml
+++ b/components/iot-frontend/manifests/iot-frontend-route.yaml
@@ -5,7 +5,6 @@ metadata:
     app: iot-frontend
   name: iot-frontend
 spec:
-  host: iot-frontend-oschneid-manuela.apps.ocp1.stormshift.coe.muc.redhat.com
   port:
     targetPort: 8080-tcp
   to:
@@ -14,11 +13,4 @@ spec:
     weight: 100
   wildcardPolicy: None
 status:
-  ingress:
-  - conditions:
-    - lastTransitionTime: 2019-11-28T20:01:45Z
-      status: "True"
-      type: Admitted
-    host: iot-frontend-oschneid-iot.apps.ocp1.stormshift.coe.muc.redhat.com
-    routerName: router
-    wildcardPolicy: None
+  ingress: []
