enable sensor to use web socket communication to support cross-cluster communication

--- a/components/iot-consumer/manifests/amq-broker.yaml
+++ b/components/iot-consumer/manifests/amq-broker.yaml
@@ -13,6 +13,9 @@ spec:
   console:
     expose: true
   acceptors:
+    - name: all
+      port: 61616
+      expose: true
     # - name: amqp
     #   protocols: amqp
     #   port: 5672
@@ -27,17 +30,17 @@ spec:
     #   expose: true
     #   anycastPrefix: jms.topic.
     #   multicastPrefix: /queue/
-    - name: mqtt
-      protocols: mqtt
-      port: 1813
-      # sslEnabled: true
-      enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
-      enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
-      needClientAuth: true
-      wantClientAuth: true
-      verifyHost: true
-      sslProvider: JDK
-      sniHost: broker-amq-mqtt
-      expose: true
-      anycastPrefix: jms.topic.
-      multicastPrefix: /queue/
+    # - name: mqtt
+    #   protocols: mqtt
+    #   port: 1883
+    #   # sslEnabled: true
+    #   enabledCipherSuites: SSL_RSA_WITH_RC4_128_SHA,SSL_DH_anon_WITH_3DES_EDE_CBC_SHA
+    #   enabledProtocols: TLSv1,TLSv1.1,TLSv1.2
+    #   needClientAuth: true
+    #   wantClientAuth: true
+    #   verifyHost: true
+    #   sslProvider: JDK
+    #   sniHost: broker-amq-mqtt
+    #   expose: true
+    #   anycastPrefix: jms.topic.
+    #   multicastPrefix: /queue/
