--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#logging.level.org.eclipse.paho.client.mqttv3=TRACE
+
+
 # Application Properties
 app.name=iot-ocp
 device.id=iottest
@@ -7,8 +10,9 @@ device.categories=Organ,Machine
 # MQTT
 mqtt.username=iotuser
 mqtt.password=iotuser
-mqtt.service=localhost
-mqtt.port=1883
+mqtt.service=broker-amq-mqtt-all-0-svc-rte-iotdemo.apps-crc.testing
+mqtt.port=80
+mqtt.tls=false
 
 # GPS
 sensor.gps.enabled=true
