--- a/components/iot-frontend/src/conf/config.json
+++ b/components/iot-frontend/src/conf/config.json
@@ -1,5 +1,5 @@
 {
-    "websocketHost": "http://iot-frontend-iotdemo.apps-crc.testing",
+    "websocketHost": "http://iot-consumer-iotdemo.apps-crc.testing",
     "websocketPath": "/api/service-web/socket",
     "SERVER_TIMEOUT": 7500
 }
