--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -10,9 +10,9 @@ device.categories=Organ,Machine
 # MQTT
 mqtt.username=iotuser
 mqtt.password=iotuser
-mqtt.service=broker-amq-mqtt-all-0-svc-rte-iotdemo.apps-crc.testing
-mqtt.port=80
-mqtt.tls=false
+mqtt.service=${COMPONENT_MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-iotdemo.apps-crc.testing}
+mqtt.port=${COMPONENT_MQTT_PORT:80}
+mqtt.tls=${COMPONENT_MQTT_TLSSNI:false}
 
 # GPS
 sensor.gps.enabled=true
