--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -1,5 +1,10 @@
+resources:
+- iotdemo-namespace.yaml
+- iotdemo-rolebinding.yaml
+- iotdemo-operatorgroup.yaml
 bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
 - iot-software-sensor/manifests
+namespace: iotdemo
 
