--- a/components/iot-frontend/manifests/iot-frontend-dc.yaml
+++ b/components/iot-frontend/manifests/iot-frontend-dc.yaml
@@ -36,11 +36,20 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+            - mountPath: /var/www/html/conf/config.json
+              name: iot-frontend-cfg-vol
+              subPath: config.json
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+        - configMap:
+            defaultMode: 438
+            name: iot-frontend-cfg
+          name: iot-frontend-cfg-vol
   test: false
   triggers:
   - type: ConfigChange
