changed connect options, new config entries, removed countdown sensor

--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -1,21 +1,20 @@
 #logging.level.org.eclipse.paho.client.mqttv3=TRACE
 
-
-# Application Properties
-app.name=iot-ocp
-device.id=iottest
-iot.types=temperature,vibration,gps,countdown,light
-device.categories=Organ,Machine
+# App Sensor
+app.name=iot-sensor
+machine.id=pump-1
+device.id=sensor-tv
+device.metrics=temperature,vibration,gps,light
 
 # MQTT
 mqtt.username=iotuser
 mqtt.password=iotuser
-mqtt.service=${COMPONENT_MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-iotdemo.apps-crc.testing}
+mqtt.service=${COMPONENT_MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
 mqtt.port=${COMPONENT_MQTT_PORT:80}
 mqtt.tls=${COMPONENT_MQTT_TLSSNI:false}
 
 # GPS
-sensor.gps.enabled=true
+sensor.gps.enabled=false
 sensor.gps.frequency=5
 sensor.gps.initialLatitude=42.579258
 sensor.gps.initialLongitude=-71.437841
@@ -23,12 +22,6 @@ sensor.gps.iterationLatitude=-0.009
 sensor.gps.iterationLongitude=-0.012
 sensor.gps.finalLatitude=40.689879
 sensor.gps.finalLongitude=-73.992895
-
-# Countdown
-sensor.countdown.enabled=false
-sensor.countdown.frequency=60
-sensor.countdown.start=7200
-sensor.countdown.iteration=60
 
 # Vibration
 sensor.vibration.enabled=true
