externalized Sensor config

--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -1,52 +1,52 @@
 #logging.level.org.eclipse.paho.client.mqttv3=TRACE
 
 # App Sensor
-app.name=iot-sensor
-machine.id=pump-1
-device.id=sensor-tv
-device.metrics=temperature,vibration,gps,light
+app.name=${APP_NAME:iot-sensor}
+machine.id=${MACHINE_ID:pump-1}
+device.id=${DEVICE_ID:sensor-tv}
+device.metrics=${DEVICE_METRICS:temperature,vibration,gps,light}
 
 # MQTT
-mqtt.username=iotuser
-mqtt.password=iotuser
-mqtt.service=${COMPONENT_MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
-mqtt.port=${COMPONENT_MQTT_PORT:80}
-mqtt.tls=${COMPONENT_MQTT_TLSSNI:false}
+mqtt.username=${MQTT_USER:iotuser}
+mqtt.password=${MQTT_PASSWORD:iotuser}
+mqtt.service=${MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
+mqtt.port=${MQTT_PORT:80}
+mqtt.tls=${MQTT_TLSSNI:false}
 
 # GPS
-sensor.gps.enabled=false
-sensor.gps.frequency=5
-sensor.gps.initialLatitude=42.579258
-sensor.gps.initialLongitude=-71.437841
-sensor.gps.iterationLatitude=-0.009
-sensor.gps.iterationLongitude=-0.012
-sensor.gps.finalLatitude=40.689879
-sensor.gps.finalLongitude=-73.992895
+sensor.gps.enabled=${SENSOR_GPS_ENABLED:false}
+sensor.gps.frequency=${SENSOR_GPS_FREQUENCY:5}
+sensor.gps.initialLatitude=${SENSOR_GPS_INITIAL_LATITUDE:42.579258}
+sensor.gps.initialLongitude=${SENSOR_GPS_INITIAL_LONGITUDE:-71.437841}
+sensor.gps.iterationLatitude=${SENSOR_GPS_ITERATION_LATITUDE:-0.009}
+sensor.gps.iterationLongitude=${SENSOR_GPS_ITERATION_LONGITUDE:-0.012}
+sensor.gps.finalLatitude=${SENSOR_GPS_FINAL_LATITUDE:40.689879}
+sensor.gps.finalLongitude=${SENSOR_GPS_FINAL_LONGITUDE:-73.992895}
 
 # Vibration
-sensor.vibration.enabled=true
-sensor.vibration.frequency=5
-sensor.vibration.start=0
-sensor.vibration.minRange=0
-sensor.vibration.maxRange=18
-sensor.vibration.minIteration=0
-sensor.vibration.maxIteration=1
+sensor.vibration.enabled=${SENSOR_VIBRATION_ENABLED:true}
+sensor.vibration.frequency=${SENSOR_VIBRATION_FREQUENCY:5}
+sensor.vibration.start=${SENSOR_VIBRATION_START:0}
+sensor.vibration.minRange=${SENSOR_VIBRATION_MINRANGE:0}
+sensor.vibration.maxRange=${SENSOR_VIBRATION_MAXRANGE:18}
+sensor.vibration.minIteration=${SENSOR_VIBRATION_MINITERATION:0}
+sensor.vibration.maxIteration=${SENSOR_VIBRATION_MAXITERATION:1}
 
 # Temperature
-sensor.temperature.enabled=true
-sensor.temperature.frequency=5
-sensor.temperature.startMin=50
-sensor.temperature.startMax=50
-sensor.temperature.minRange=40
-sensor.temperature.maxRange=75
-sensor.temperature.minIteration=0
-sensor.temperature.maxIteration=1
+sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:true}
+sensor.temperature.frequency=${SENSOR_TEMPERATURE_FREQUENCY:5}
+sensor.temperature.startMin=${SENSOR_TEMPERATURE_STARTMIN:50}
+sensor.temperature.startMax=${SENSOR_TEMPERATURE_STARTMAX:50}
+sensor.temperature.minRange=${SENSOR_TEMPERATURE_MINRANGE:40}
+sensor.temperature.maxRange=${SENSOR_TEMPERATURE_MAXRANGE:75}
+sensor.temperature.minIteration=${SENSOR_TEMPERATURE_MINITERATION:0}
+sensor.temperature.maxIteration=${SENSOR_TEMPERATURE_MAXITERATION:1}
 
 # Light
-sensor.light.enabled=false
-sensor.light.frequency=5
-sensor.light.start=0
-sensor.light.minRange=0
-sensor.light.maxRange=25000
-sensor.light.minIteration=0
-sensor.light.maxIteration=3
+sensor.light.enabled=${SENSOR_LIGHT_ENABLED:false}
+sensor.light.frequency=${SENSOR_LIGHT_FREQUENCY:5}
+sensor.light.start=${SENSOR_LIGHT_START:0}
+sensor.light.minRange=${SENSOR_LIGHT_MINRANGE:0}
+sensor.light.maxRange=${SENSOR_LIGHT_MAXRANGE:25000}
+sensor.light.minIteration=${SENSOR_LIGHT_MINITERATION:0}
+sensor.light.maxIteration=${SENSOR_LIGHT_MAXITERATION:3}
