--- a/components/iot-software-sensor/manifests/iot-software-sensor-cm-2.yaml
+++ b/components/iot-software-sensor/manifests/iot-software-sensor-cm-2.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: iot-software-sensor-config
+  name: iot-software-sensor-2-config
 data:
   APP_NAME: iot-sensor
-  DEVICE_ID: sensor-tv
+  DEVICE_ID: door-sensor-v
   DEVICE_METRICS: 'temperature,vibration,gps,light'
-  MACHINE_ID: pump-1
+  MACHINE_ID: door-1-floor-1
 
   MQTT_HOSTNAME: broker-amq-mqtt-all-0-svc-rte-iotdemo.apps.ocp4.stormshift.coe.muc.redhat.com
   MQTT_PASSWORD: iotuser
@@ -31,7 +31,7 @@ data:
   SENSOR_LIGHT_MINRANGE: '0'
   SENSOR_LIGHT_START: '0'
 
-  SENSOR_TEMPERATURE_ENABLED: 'true'
+  SENSOR_TEMPERATURE_ENABLED: 'false'
   SENSOR_TEMPERATURE_FREQUENCY: '5'
   SENSOR_TEMPERATURE_MAXITERATION: '1'
   SENSOR_TEMPERATURE_MAXRANGE: '75'
