--- a/components/iot-software-sensor/manifests/kustomization.yaml
+++ b/components/iot-software-sensor/manifests/kustomization.yaml
@@ -1,4 +1,7 @@
 resources:
 - iot-software-sensor-bc.yaml
+- iot-software-sensor-cm.yaml
+- iot-software-sensor-cm-2.yaml
 - iot-software-sensor-dc.yaml
+- iot-software-sensor-dc-2.yaml
 - iot-software-sensor-is.yaml
