--- a/components/iot-software-sensor/src/main/resources/application.properties
+++ b/components/iot-software-sensor/src/main/resources/application.properties
@@ -9,7 +9,7 @@ device.metrics=${DEVICE_METRICS:temperature,vibration,gps,light}
 # MQTT
 mqtt.username=${MQTT_USER:iotuser}
 mqtt.password=${MQTT_PASSWORD:iotuser}
-mqtt.service=${MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
+mqtt.service=${MQTT_HOSTNAME:broker-amq-mqtt-all-0-svc}
 mqtt.port=${MQTT_PORT:80}
 mqtt.tls=${MQTT_TLSSNI:false}
 
