--- a/components/iotdemo-rolebinding.yaml
+++ b/components/iotdemo-rolebinding.yaml
@@ -1,33 +1,13 @@
-kind: List
-apiVersion: v1
-items:
-- kind: RoleBinding
-  apiVersion: rbac.authorization.k8s.io/v1
-  metadata:
-    name: system:image-pullers
-    namespace: iotdemo
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: system:image-puller
-  subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: system:authenticated
-
-- kind: RoleBinding
-  apiVersion: rbac.authorization.k8s.io/v1
-  metadata:
-    namespace: manuela-stormshift-messaging
-    name: admin
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: ClusterRole
-    name: admin
-  subjects:
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: manuela-team
-  - apiGroup: rbac.authorization.k8s.io
-    kind: Group
-    name: manuela-dev
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: system:image-pullers
+  namespace: iotdemo
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:image-puller
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: system:authenticated
