Added quay push secrets #119

--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -2,9 +2,9 @@ resources:
 - iotdemo-namespace.yaml
 - iotdemo-rolebinding.yaml
 - iotdemo-operatorgroup.yaml
+- iotdemo-secrets.yaml
 bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
 - iot-software-sensor/manifests
 namespace: iotdemo
-
