--- a/components/iot-software-sensor/manifests/kustomization.yaml
+++ b/components/iot-software-sensor/manifests/kustomization.yaml
@@ -1,3 +1,6 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - iot-software-sensor-bc.yaml
 - iot-software-sensor-cm.yaml
