--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -1,8 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - iotdemo-namespace.yaml
 - iotdemo-rolebinding.yaml
 - iotdemo-operatorgroup.yaml
-- iotdemo-secrets.yaml
+#- iotdemo-secrets.yaml
 bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
