first working operator

--- a/networkpathoperator/networkpath/roles/networkpath/tasks/main.yml
+++ b/networkpathoperator/networkpath/roles/networkpath/tasks/main.yml
@@ -1,2 +1,14 @@
 ---
 # tasks file for networkpath
+- name: open ports
+  debug:
+    msg: "name: {{ meta.name }} namespace: {{ meta.namespace }}"
+
+- name: update status
+  operator_sdk.util.k8s_status:
+    api_version: manuela.redhat.com/v1alpha1
+    kind: NetworkPath
+    name: "{{ meta.name }}"
+    namespace: "{{ meta.namespace }}"
+    status:
+      foo: bar
