--- a/networkpathoperator/networkpath/watches.yaml
+++ b/networkpathoperator/networkpath/watches.yaml
@@ -2,4 +2,4 @@
 - version: v1alpha1
   group: manuela.redhat.com
   kind: NetworkPath
-  role: /opt/ansible/roles/networkpath
+  playbook: /opt/ansible/playbook.yml
