--- a/networkpathoperator/firewallrule/deploy/role.yaml
+++ b/networkpathoperator/firewallrule/deploy/role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
-  name: networkpath
+  name: firewallrule
 rules:
 - apiGroups:
   - ""
@@ -48,7 +48,7 @@ rules:
 - apiGroups:
   - apps
   resourceNames:
-  - networkpath
+  - firewallrule
   resources:
   - deployments/finalizers
   verbs:
