--- a/networkpathoperator/firewallrule/deploy/crds/manuela.redhat.com_firewallrules_crd.yaml
+++ b/networkpathoperator/firewallrule/deploy/crds/manuela.redhat.com_firewallrules_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: networkpaths.manuela.redhat.com
+  name: firewallrules.manuela.redhat.com
 spec:
   group: manuela.redhat.com
   names:
-    kind: NetworkPath
-    listKind: NetworkPathList
-    plural: networkpaths
-    singular: networkpath
+    kind: FirewallRule
+    listKind: FirewallRuleList
+    plural: firewallrules
+    singular: firewallrule
   scope: Namespaced
   subresources:
     status: {}
