--- a/networkpathoperator/firewallrule/deploy/kustomization.yaml
+++ b/networkpathoperator/firewallrule/deploy/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- operator.yaml
+#- operator.yaml
 - role_binding.yaml
 - role.yaml
 - service_account.yaml
-- crds/manuela.redhat.com_networkpaths_crd.yaml
-- crds/manuela.redhat.com_v1alpha1_networkpath_cr.yaml
+- crds/manuela.redhat.com_firewallrules_crd.yaml
+- crds/manuela.redhat.com_v1alpha1_firewallrule_cr.yaml
