--- a/networkpathoperator/firewallrule/deploy/role_binding.yaml
+++ b/networkpathoperator/firewallrule/deploy/role_binding.yaml
@@ -1,11 +1,11 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: networkpath
+  name: firewallrule
 subjects:
 - kind: ServiceAccount
-  name: networkpath
+  name: firewallrule
 roleRef:
   kind: Role
-  name: networkpath
+  name: firewallrule
   apiGroup: rbac.authorization.k8s.io
