--- a/networkpathoperator/firewallrule/molecule/test-local/prepare.yml
+++ b/networkpathoperator/firewallrule/molecule/test-local/prepare.yml
@@ -10,7 +10,7 @@
   tasks:
   - name: Create Custom Resource Definition
     k8s:
-      definition: "{{ lookup('file', '/'.join([deploy_dir, 'crds/manuela.redhat.com_networkpaths_crd.yaml'])) }}"
+      definition: "{{ lookup('file', '/'.join([deploy_dir, 'crds/manuela.redhat.com_firewallrules_crd.yaml'])) }}"
 
   - name: Ensure specified namespace is present
     k8s:
