--- a/tekton/kustomization.yaml
+++ b/tekton/kustomization.yaml
@@ -5,5 +5,6 @@ bases:
 - pipelines
 - secrets
 - tasks
-namespace: manuela-ci
+- github.com/sa-mw-dach/manuela-gitops/config/templates/manuela-team-rolebindings
 
+namespace: manuela-ci
