--- a/tekton/tasks/argocd-task.yaml
+++ b/tekton/tasks/argocd-task.yaml
@@ -26,7 +26,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - if [ -z $ARGOCD_AUTH_TOKEN ]; then
-            yes | argocd login $ARGOCD_SERVER --grpc-web --insecure --username=$ARGOCD_USERNAME --password=$ARGOCD_PASSWORD;
+            yes | argocd login $ARGOCD_SERVER --grpc-web $(inputs.params.flags) --username=$ARGOCD_USERNAME --password=$ARGOCD_PASSWORD;
           fi
     - name: sync
       image: argoproj/argocd:$(inputs.params.argocd-version)
