--- a/tekton/secrets/github-secret.yaml
+++ b/tekton/secrets/github-secret.yaml
@@ -3,5 +3,6 @@ apiVersion: v1
 metadata:
   name: github
 data:
-  token: 0ae5ce5764fbe8e79243955e909ca03abea1cacf
+  token: cmVwbGFjZW1l
+  user: cmVwbGFjZW1l
 type: Opaque
