--- a/tekton/tasks/bumpversion-task.yaml
+++ b/tekton/tasks/bumpversion-task.yaml
@@ -11,6 +11,15 @@ spec:
     params:
       - name: PATH_CONTEXT
         type: string
+      - name: GIT_USERNAME
+        description: The username to be used for the git commit.
+        type: string
+        default: "manuela-tekton"
+      - name: GIT_EMAIL
+        description: The email to be used for the git commit.
+        type: string
+        default: "manuela-team@redhat.com"
+
 #  results:
 #    - name: new-version
 #      description: The current date in unix timestamp format
@@ -20,10 +29,27 @@ spec:
     script: |
       #!/usr/bin/env bash
       cd git-repo/$(inputs.params.PATH_CONTEXT)/
-      bump2version --commit patch VERSION
+      bump2version --commit build VERSION
 
-#  - name: git-push
-#    image: alpine/git
-#    script: |
-#        #!/usr/bin/env sh
-#        git push
+  - name: push-version-to-git
+    image: alpine/git
+    env:
+      - name: GITHUB_TOKEN
+        valueFrom:
+          secretKeyRef:
+            name: github
+            key: token
+      - name: GITHUB_USER
+        valueFrom:
+          secretKeyRef:
+            name: github
+            key: user
+    script: |
+        #!/usr/bin/env sh
+        echo "https://$GITHUB_USER:$GITHUB_TOKEN@github.com" > ~/.git-credentials
+        git config --global credential.helper store 'store --file ~/.git-credentials'
+        git config --global user.email "$(inputs.params.GIT_EMAIL)"
+        git config --global user.name "$(inputs.params.GIT_USERNAME)"
+        git commit -a -m "Version Bump"
+        git push --set-upstream origin master
+    workingdir: /workspace/git-repo
